push() and pop() methods for yard. #7